--- a/templates/index.html
+++ b/templates/index.html
@@ -23,14 +23,19 @@
                 text-align: center;
                 margin-bottom: 40px;
             }
-            .container {
-                width: 500px;
+            .comment_container {
                 font-size: 16px;
-                margin: 10px auto;
-
+                float:left;
+                left: 50%;
+                position: relative;
             }
-
+            .comment_wrapper {
+                float: left;
+                position: relative;
+                left: -50%;
+            }
             .comment_text {
+                white-space: normal;
             }
             .more {
                 clear: both;
@@ -51,20 +56,22 @@
         </style>
     </head>
     <body>
-        <h1 class='title'>FCC Net Neutrality Comments</h1>
+        <h1 class='title'><a href="/">FCC Net Neutrality Comments</a></h1>
 
-        <div class='container'>
-            <div class='cf'>
-                <p class='comment_text'>{{ comment.DocText }}</p>
+        <div class='comment_container'>
+            <div class='comment_wrapper'>
+                <pre class='comment_text'>{{ comment_text | safe}}</pre>
                 <div class='address'>
                     <div>{{ comment.AddressCity}}, {{ comment.AddressState }}</div>
                     <div>{{ comment.ReceivedDate }}</div>
-                    <div><a href="{{ comment_link }}">Link</a></div>
+                    <div><a href="{{ comment_link }}"></a></div>
+                    <div><a href="{{ comment_link }}">Permalink</a></div>
+                    <div><a href="{{ comment.Link }}" target="_blank">Original</a></div>
                 </div>
             </div>
-
-            <h2 class='more'><a href="/">More</a></h2>
         </div>
+
+        <h2 class='more'><a href="/">Show me another</a></h2>
 
 
         <script>
