No reason for the title to be a link

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
         </script>
     </head>
     <body>
-        <h1 class='title'><a href="/">FCC Net Neutrality Comments</a></h1>
+        <h1 class='title'>FCC Net Neutrality Comments</h1>
 
         <div class='comment_container'>
             <div class='comment_wrapper'>
