--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
         <style>
             body {
                 font-family: 'Source Code Pro', monospace;
+                /*overflow-x: hidden;*/
             }
 
             .title {
@@ -29,6 +30,7 @@
                 left: 50%;
                 position: relative;
                 margin-bottom: 40px;
+                width: 50%;
             }
             .comment_wrapper {
                 float: left;
@@ -78,7 +80,9 @@
 
         <div class='comment_container'>
             <div class='comment_wrapper'>
-                <pre class='comment_text'>{{ comment_text | safe}}</pre>
+                <div class='comment_text'>
+                    <p>{{ comment_text | safe}}<p>
+                </div>
                 <div class='address'>
                     <div>{{ comment.AddressCity}}, {{ comment.AddressState }}</div>
                     <div>{{ comment.ReceivedDate }}</div>
