--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,13 @@
             .cf:after {
                 clear: both;
             }
+
+            @media only screen and (max-width : 900px) {
+                .comment_wrapper {
+                    left: -87.5%;
+                    width: 175%;
+                }
+            }
         </style>
         <script>
             if ( history.replaceState) {
