--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,8 @@
         <meta name="description" content="FCC Net Neutrality Comments">
         <meta http-equiv="content-language" content="en-us">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link rel="shortcut icon" href="/favicon.ico" />-->
         <base href="/" />
-        <link rel="shortcut icon" href="http://example.com/myicon.ico" />
+        <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" href="/static/200px-NetNeutrality_logo.svg.png" />
 
         <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
