--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>FCC Net Neutrality Comments</title>
-        <meta name="description" content="FCC Net Neutrality Comments">
+        <title>Public Comments on Net Neutrality</title>
+        <meta name="description" content="Public Comments on Net Neutrality">
         <meta http-equiv="content-language" content="en-us">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base href="/" />
@@ -85,7 +85,7 @@
         </script>
     </head>
     <body>
-        <h1 class='title'>FCC Net Neutrality Comments</h1>
+        <h1 class='title'>Public Comments on Net Neutrality</h1>
 
         <div class='comment_container'>
             <div class='comment_wrapper'>
