--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,27 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Public Comments on Net Neutrality</title>
         <meta name="description" content="Public Comments on Net Neutrality">
+        <link rel="canonical" href="http://www.netequality.us/{{ comment_link }}" />
+
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="Public Comments on Net Neutrality"/>
+        <meta property="og:url" content="http://www.netequality.us/{{ comment_link }}"/>
+        <meta property="og:description" content="{{ long_summary }}"/>
+
+        <meta property="twitter:card" content="summary"/>
+        <meta name="twitter:site" content="@Net_Equality">
+        <meta property="twitter:title" content="Public Comments on Net Neutrality"/>
+        <meta property="twitter:url" content="http://www.netequality.us/{{ comment_link }}"/>
+        <meta property="twitter:description" content="{{ long_summary }}"/>
+
         <meta http-equiv="content-language" content="en-us">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <base href="/" />
+
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" href="/static/200px-NetNeutrality_logo.svg.png" />
 
         <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
-
         <style>
             body {
                 font-family: 'Source Code Pro', monospace;
@@ -98,7 +111,7 @@
                     <div><a href="{{ comment.Link }}" target="_blank">Original</a></div>
                 </div>
                 <div class='social'>
-                    <a href="https://twitter.com/share?text={{ comment_text_for_tweet | urlencode  }}&via=Net_Equality" class="twitter-share-button" data-lang="en" data-size="large">Tweet</a>
+                    <a href="https://twitter.com/share?text={{ twitter_text | urlencode  }}&via=Net_Equality" class="twitter-share-button" data-lang="en" data-size="large">Tweet</a>
                 </div>
             </div>
         </div>
