Add a link to post comments

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,12 +40,12 @@
             }
             #content {
                 overflow:auto;
-                padding-bottom: 25px; /* must be same height as the footer */
+                padding-bottom: 30px; /* must be same height as the footer */
             }
             #footer {
                 position: relative;
-                margin-top: -25px; /* negative value of footer height */
-                height: 25px;
+                margin-top: -30px; /* negative value of footer height */
+                height: 30px;
                 clear: both;
                 margin-left: 10px;
                 z-index: 10;
@@ -93,6 +93,12 @@
                 clear: both;
                 text-align: center;
                 margin-bottom: 5px;
+            }
+            .post_comment {
+                margin-top: 40px;
+                margin-bottom: 20px;
+                text-align: center;
+                font-size: 20px;
             }
             .spacebar {
                 clear: both;
@@ -164,6 +170,9 @@
 
                 <h2 class='more'><a href="/">Next Comment</a></h2>
                 <div class='spacebar'>(or hit your spacebar)</div>
+                <h3 class='post_comment'>
+                    <a href="http://www.fcc.gov/comments" target="_blank">Make your voice heard</a>
+                </h3>
             </div>
         </div>
         <div id="footer">
