--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Public Comments on Net Neutrality</title>
         <meta name="description" content="Public Comments on Net Neutrality">
-        <link rel="canonical" href="http://www.netequality.us/{{ comment_link }}" />
+        <link rel="canonical" href="http://www.netequality.us{{ comment_link }}" />
 
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Public Comments on Net Neutrality"/>
-        <meta property="og:url" content="http://www.netequality.us/{{ comment_link }}"/>
+        <meta property="og:url" content="http://www.netequality.us{{ comment_link }}"/>
         <meta property="og:description" content="{{ long_summary }}"/>
 
         <meta property="twitter:card" content="summary"/>
         <meta name="twitter:site" content="@Net_Equality">
         <meta property="twitter:title" content="Public Comments on Net Neutrality"/>
-        <meta property="twitter:url" content="http://www.netequality.us/{{ comment_link }}"/>
+        <meta property="twitter:url" content="http://www.netequality.us{{ comment_link }}"/>
         <meta property="twitter:description" content="{{ long_summary }}"/>
 
         <meta http-equiv="content-language" content="en-us">
