Remove use of bold font.

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,10 +25,13 @@
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" href="/static/200px-NetNeutrality_logo.svg.png" />
 
-        <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400' rel='stylesheet' type='text/css'>
         <style>
             body {
                 font-family: 'Source Code Pro', monospace;
+            }
+            h1,h2,h3{
+                font-weight: 400;
             }
             html, body{
                 height: 100%;
