--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,7 @@
                 float: left;
                 position: relative;
                 left: -50%;
+                width:100%;
             }
             .comment_text {
                 font-size: 20px;
